--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
     "description": "Jan Sahayak - AI-powered document generation platform",
     "private": true,
     "dependencies": {
+        "@react-three/drei": "^9.88.13",
+        "@react-three/fiber": "^8.15.11",
+        "axios": "^1.6.2",
+        "framer-motion": "^10.16.16",
+        "jspdf": "^4.0.0",
+        "jspdf-autotable": "^5.0.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-dropzone": "^14.2.3",
         "react-router-dom": "^6.20.0",
-        "framer-motion": "^10.16.16",
-        "@react-three/fiber": "^8.15.11",
-        "@react-three/drei": "^9.88.13",
-        "three": "^0.158.0",
-        "axios": "^1.6.2",
-        "jspdf": "^2.5.1",
-        "jspdf-autotable": "^3.8.2",
-        "react-dropzone": "^14.2.3"
+        "three": "^0.158.0"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.2.1",
-        "vite": "^5.0.8"
+        "vite": "^7.3.1"
     },
     "scripts": {
         "dev": "vite",
